Add - Ajuste inputs cadastro

--- a/web-data-viz/public/new_cadastro.html
+++ b/web-data-viz/public/new_cadastro.html
@@ -33,7 +33,7 @@
             <form action="">
                 <h1>Cadastrar</h1>
                 <div class="input">
-                    <input type="text" placeholder="CPF" required>
+                    <input type="text" placeholder="Nome" required>
                     <i class='bx bx-info-circle' ></i>
                 </div>
                 <div class="input">
@@ -41,13 +41,21 @@
                     <i class='bx bxl-gmail' ></i>
                 </div>
                 <div class="input">
-                    <input type="text" placeholder="Senha" required>
+                    <input type="co" placeholder="CPF" required>
+                    <i class='bx bxl-gmail' ></i>
+                </div>
+                <div class="input">
+                    <input type="text" placeholder="Codigo Empresa" required>
                     <i class='bx bx-lock' ></i>
                 </div>
                 <div class="input">
-                    <input type="text" placeholder="Confirme a sua senha" required>
+                    <input type="text" placeholder="Senha" required>
                     <i class='bx bx-lock' ></i>
                 </div>
+                <!-- <div class="input">
+                    <input type="text" placeholder="Confirme a sua senha" required>
+                    <i class='bx bx-lock' ></i>
+                </div> -->
               
                 <button type="button" class="btn">Cadastrar</button>
             </form>
