arruma com modelagem o back-end e tela de maquinas e cargo

--- a/web-data-viz/public/cadastroMaquina.html
+++ b/web-data-viz/public/cadastroMaquina.html
@@ -64,7 +64,7 @@
                 <div class="maquinas">
                     <div class="telaDados">
                         <div class="tituloDados">
-                            <h3>Quais dados você deseja capturar?</h3>
+                            <h3>Quais dados você deseja capturar?</h3> <i class='bx bx-x-circle'></i>
                         </div>
                         <label>
                             <input type="checkbox" value="cpu"> CPU
