fix: nome tabela de alerta arrumado

--- a/web-data-viz/public/alertas.html
+++ b/web-data-viz/public/alertas.html
@@ -86,7 +86,7 @@
           <table>
             <tr>
               <th>Nome</th>
-              <th>Nome Servidor</th>
+              <th>Servidor</th>
               <th>Data</th>
               <th>Editar</th>
               <th>Excluir</th>
