Add - Validação de Cadastro e Alertas

--- a/web-data-viz/public/index.html
+++ b/web-data-viz/public/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro/Login</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./style/cadastro.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body onload="listarEmpresas()">
@@ -29,7 +30,6 @@
                 <button onclick="entrar()" type="button" class="btn">Login</button>
             </form>
         </div>
-
 
         <div class="formulario cadastrar">
             <form action="">
@@ -55,11 +55,11 @@
                     <i class='bx bx-lock'></i>
                 </div>
                 <div class="input">
-                    <input type="text" placeholder="Confirme a sua senha" required>
+                    <input id="confirmeSenha_ipt" type="text" placeholder="Confirme a sua senha" required>
                     <i class='bx bx-lock' ></i>
                 </div>
 
-                <button onclick="cadastrar()" type="button" class="btn">Cadastrar</button>
+                <button onclick="cadastrar()" id="alerta" type="button" class="btn">Cadastrar</button>
             </form>
         </div>
 
@@ -80,8 +80,6 @@
             </div>
         </div>
     </div>
-
-
 
 
     <script src="./script/cadastro.js"></script>
