--- a/web-data-viz/public/home.html
+++ b/web-data-viz/public/home.html
@@ -8,7 +8,7 @@
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" href="./img/latencySlayers-removebg-preview 2.png``">
-    <link rel="stylesheet" href="./style/header.css">
+    <link rel="stylesheet" href="./style/headerHome.css">
     <link rel="stylesheet" href="./style/home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
