--- a/web-data-viz/public/dashs/suporte.html
+++ b/web-data-viz/public/dashs/suporte.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DashBoard | Tempo real </title>
-    <link rel="stylesheet" href="/dashs.style/dashSuporte.css">
+    <link rel="stylesheet" href="../dashs.style/dashSuporte.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
@@ -16,7 +16,7 @@
         <div class="navegacao">
             <div class="topo">
                 <div class="user">
-                    <img class="ph" src="/img/user.svg" alt="">
+                    <img class="ph" src="../img/user.svg" alt="">
                     <div class="info-user">
                         <h2 class="nome-user">User</h2>
                         <span class="email-user">exemploemail@gmail.com</span>
@@ -28,19 +28,19 @@
                 <ul>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="/img/dashboard.svg" alt=""></span>
+                            <span class="icons"><img src="../img/dashboard.svg" alt=""></span>
                             <span class="titulo">DASHBOARD</span>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="/img/alertas.svg" alt=""></span>
+                            <span class="icons"><img src="../img/alertas.svg" alt=""></span>
                             <span class="titulo">ALERTAS</span>
                         </a>
                     </li>
                     <li>
                         <a href="">
-                            <span class="icons"><img src="/img/database-fill-add.svg" alt=""></span>
+                            <span class="icons"><img src="../img/database-fill-add.svg" alt=""></span>
                             <span class="titulo">MÁQUINAS</span>
                         </a>
                     </li>
